--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "normalize-scss": "^7.0.1",
     "roboto-fontface": "^0.9.0",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
