--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@fortawesome/vue-fontawesome": "^0.1.0",
     "normalize-scss": "^7.0.1",
     "roboto-fontface": "^0.9.0",
+    "vee-validate": "^2.1.0-beta.6",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
