--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.1.0",
     "@fortawesome/free-solid-svg-icons": "^5.1.0",
     "@fortawesome/vue-fontawesome": "^0.1.0",
+    "lodash": "^4.17.10",
     "normalize-scss": "^7.0.1",
     "roboto-fontface": "^0.9.0",
     "vee-validate": "^2.1.0-beta.6",
